fixed editing jumping to the bottom and added smooth transition to the state change

--- a/sass/components/_post.scss
+++ b/sass/components/_post.scss
@@ -5,6 +5,7 @@
         overflow: hidden;
         height: 100%;
         min-height: 46px;
+        max-height: 560px;
         border: none;
         background: transparent;
         border-radius: 4px;
@@ -665,6 +666,8 @@
     padding: 8px 0.5em 0 1.5em; // If this needs to be changed then .post-row__padding needs to be adjusted accordingly
     word-wrap: break-word;
 
+    transition: height 200ms, background-color 200ms;
+
     &:not(.post--editing):hover {
         background-color: rgba(v(center-channel-color-rgb), 0.04);
 
@@ -707,12 +710,6 @@
                     padding-right: 50px;
                 }
             }
-        }
-
-        .invisible {
-            position: absolute;
-            width: 100%;
-            opacity: 0;
         }
     }
 
@@ -1412,7 +1409,7 @@
         overflow: hidden;
         max-height: 1000px;
         padding-top: 5px;
-        transition: max-height 0.5 ease;
+        transition: max-height 500ms ease;
 
         &[hidden] {
             max-height: 0;
@@ -1559,6 +1556,35 @@
 
             a {
                 color: $white;
+            }
+        }
+
+        &--transition {
+            .hide-element {
+                display: none;
+            }
+
+            &.fade-enter {
+                opacity: 0;
+                transform: translateX(-30%);
+            }
+            &.fade-enter-active {
+                opacity: 1;
+                transform: translateX(0);
+            }
+            &.fade-exit {
+                opacity: 1;
+                transform: translateX(0);
+            }
+            &.fade-exit-active {
+                opacity: 0;
+                transform: translateX(30%);
+            }
+            &.fade-enter-active,
+            &.fade-exit-active {
+                body.enable-animations & {
+                    transition: opacity 250ms ease-in-out, transform 150ms ease-in-out 100ms;
+                }
             }
         }
     }
